dsek-frontend/src/css/Nav.css
.Menu {
    width: 100%;
    height: 32px;
    justify-content: center;
    min-width: fit-content;
    display: grid;
    grid-template-columns: 109px 90px 100px repeat(3, auto);
    column-gap: 5px;
}

.NavButton {
    background-color: white;
    height: 32px;
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
    width: 132px;  /* TA INTE BORT */
    padding: 0 10px 0 10px;
}

.Dropdown {
    display: flex;
    justify-content: center;
    width: fit-content;
    align-items: center;
    white-space: nowrap;
}

.DropdownNavButton {
    text-align: left;
    border-radius: 0;
    background-color: white;
}

.DropdownNavLink {
    text-decoration: none;
    color: white;
}

.DropdownNavLink:hover {
    color: #F7E623;
}

.dropdown-elements {
    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
    width: 132px;
}

.RegNavButton {
    cursor: pointer;
    width: fit-content;
    
}

.NavButton:hover {
    background-color: #E5398D;
    transition: 00.4s;
}

.DropdownButton:hover {
    cursor: default;
}

.NavButton:hover a, .NavButton:hover p, .NavButton:hover {
    color: #F7E623;
    text-decoration: none;
}

.NavButton a {
    text-decoration: none;
    font-size: 16px;
    line-height: 32px;
    color: #000;
    transition: color 0.15s linear;
}

.SideNav {
    width: 256px;
    background-color: #f8f8f8;
    border: 1px solid #ddd;
    border-radius: 2px;
    margin-left: auto;
    margin-right: auto;
}

.SideNavButton {
    height: 48px;
    transition: all 0.6s;
}

.SideNavButton:hover{
    height: 48px;
}

.SideNavButton:hover .SideNavButton-Img{
    transition: 1s;
}

.SideNavButton:hover:nth-child(1) .SideNavButton-Img{
    background-color: #754022;
}

.SideNavButton:hover:nth-child(2) .SideNavButton-Img{
    background-color: #E5398D;
}

.SideNavButton:hover:nth-child(3) .SideNavButton-Img{
    background-color: #F7E623;
}

.SideNavButton:hover:nth-child(4) .SideNavButton-Img{
    background-color: #70BD44;
}

.SideNavButton:hover:nth-child(5) .SideNavButton-Img{
    background-color: #20407C;
}

.SideNavButton-Img {
    width: 48px;
    height: 48px;
    margin-right: 12px;
    border-radius: 2px;
    content: "";
    float: left;
}

.SideNavButton-Text {
    width: 100%;
    height: 48px;
    line-height: 48px;
    text-align: left;
    font-size: large;
}

.SideNavButton > a {
    text-decoration: none;
    color: black;
}

.SideNavButton:hover .SideNavButton-Text{
    background-color: lightgray;
}

.SideNavButton-Text:hover{
    width: 100%;
    height: 48px;
    background-color:  lightgray;
    text-align: left;
}

.PageNavButton-Selected {
    font-family: "Asap", Arial, sans-serif;
    margin: 0 3px;
    background: #f8f8f8;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 32px;
    width: 32px;
    text-decoration: none;
    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
    transition: box-shadow 0.3s ease;
    cursor: default;
    border-bottom: #305fb9 6px solid;
    float: left;
}

.PageNavButton-Disabled {
    font-family: "Asap", Arial, sans-serif;
    margin: 0 3px;
    background: #e7e7e7;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 32px;
    width: 32px;
    text-decoration: none;
    transition: box-shadow 0.3s ease;
    cursor: default;
    float: left;
}

.PageNavButton {
    font-family: "Asap", Arial, sans-serif;
    margin: 0 3px;
    background: #f8f8f8;
    color: #000;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 32px;
    width: 32px;
    text-decoration: none;
    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
    transition: box-shadow 0.3s ease;
    cursor: default;
    float: left;
}

.PageNavButton:hover {
    cursor: pointer;
    border-bottom: #E5398D 6px solid;
}

.PageNav {
    width: 266px;
    height: 32px;
    margin: auto;
}

.hamburger{
    position: fixed;
    right: 0;
    margin-top: 10px;
    /* margin: -30px 50px auto auto; varför syns den på vissa datorer men inte andra? */
    color: red;

}
.hamburger:hover {
    cursor: pointer;
}

@media only screen and (max-width: 850px) {
    .SideNav {
        width: 95%;
    }
    .Menu {
        width: 100%;
        height: 32px;
        justify-content: left;
        display: grid;
        grid-template-columns: 100%;
    }
    
    .NavButton {
        border-top: 0.5px solid #3b3b3b;
        width: 100%;
        color: white;
        text-align: left;
        background-color: #0a0a0a;
        padding: 3px 10px 3px 10px;
    }

    .DropdownNavButton {
        background-color: #121212;
        width: 100%;
        border-top: 0.5px solid #3b3b3b;
        padding: 5px 5px 5px 35px;
        text-decoration: none;
    }

    .dropdown-elements {
        width: 100%;
    }
    
    .Dropdown {
        display: flex;
        justify-content: left;
        cursor: pointer;
    }

    .RegNavButton {
        cursor: pointer;
    }
    
    .NavButton:hover {
        background-color: #0a0a0a; /* todo: better way? */
    }

    .DropdownButton:hover {
        cursor: pointer;
    }

    .NavButton:hover {
        color: #F7E623;
    }
    
    .NavButton a {
        text-decoration: none;
        font-size: 16px;
        line-height: 32px;
        color: #fff;
        transition: color 0.15s linear;
    }

    .narrow-nav {
        display: block;
    }

    .wide-nav {
        display: none;
    }
}

@media only screen and (min-width: 850px) {
    .narrow-nav {
        display: none;
    }

    .wide-nav {
        display: block;
    }
}

